--- a/assets/src/scss/core/core.scss
+++ b/assets/src/scss/core/core.scss
@@ -372,7 +372,7 @@ footer{
 			@include justify-content(center);
 			@include align-items(center);
 			@include transition(.4s);
-			margin-left:15px;
+			margin-left:5px;
 			position:relative;
 			&:first-child{
 				margin-left:0;
@@ -383,6 +383,7 @@ footer{
 			&:before{
 				content:"";
 				display:block;
+				position: relative;
 			}
 			&.fc{
 				&:before{
@@ -410,6 +411,21 @@ footer{
 					width:15px;
 					height:15px;
 					background:url(#{$mainImgPath}/icons/Instagram_Logo.svg) no-repeat;
+				}
+			}
+			&.mdm{
+				&:before{
+					width: 14px;
+					height: 11px;
+					background:url(#{$mainImgPath}/icons/Medium_Logo.svg) no-repeat;
+				}
+			}
+			&.tlgrm{
+				&:before{
+					width:16px;
+					height:13px;
+					background:url(#{$mainImgPath}/icons/Telegram_Logo.svg) no-repeat;
+					left: -2px;
 				}
 			}
 		}
